add first and last name to swagger.json
